--- a/templates/stub.html
+++ b/templates/stub.html
@@ -8,7 +8,7 @@
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
+        <h1 class="text-primary"><strong>About Me</strong></h1>
         <p class="text-secondary">Shreya Sapkal</p>
     </div>
 {% endblock %}
