modifications to stub.html

--- a/templates/stub.html
+++ b/templates/stub.html
@@ -8,8 +8,10 @@
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>About Me</strong></h1>
-        <p class="text-secondary">Shreya Sapkal</p>
+        <h1 class="text-primary"><strong>Shreya Sapkal</strong></h1>
+        <p class="text-secondary">I enjoy baking, writing, reading, and studying engine maintenance manuals. I'm the co-president of the DNHS Speech & Debate Team, and the co-president of DNHS' South Asian Student Union (SASU). You can regularly find me hiking or training at Karate. In the future, I aspire to become a Mechanical Engineer and pursue my passion for cars.</p>
+        <a href="https://linktr.ee/southasiansu">Click to learn more about SASU!</a>
+        <img class="card-img-top" src="{{ url_for('static', filename='assets/boost.png') }}" alt="boost.png" 
     </div>
 {% endblock %}
 
