--- a/templates/stub.html
+++ b/templates/stub.html
@@ -11,7 +11,7 @@
         <h1 class="text-primary"><strong>Shreya Sapkal</strong></h1>
         <p class="text-secondary">I enjoy baking, writing, reading, and studying engine maintenance manuals. I'm the co-president of the DNHS Speech & Debate Team, and the co-president of DNHS' South Asian Student Union (SASU). You can regularly find me hiking or training at Karate. In the future, I aspire to become a Mechanical Engineer and pursue my passion for cars.</p>
         <a href="https://linktr.ee/southasiansu">Click to learn more about SASU!</a>
-        <img class="card-img-top" src="{{ url_for('static', filename='assets/boost.png') }}" alt="boost.png" 
+        <img class="card-img-top" src="{{ url_for('static', filename='assets/shreya2.jpg') }}" alt="about-me-pic" 
     </div>
 {% endblock %}
 
