--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
 {% block body %}
     <!-- Start of body content specific to page -->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>Python Home Page</strong></h1>
+        <h1 class="text-white"><strong>Shreya's Python Home Page</strong></h1>
         <div class="row">
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/python.jpeg') }}" alt="Python Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/SSjn.png') }}" alt="group-logo" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What should <mark>Student Developers learn</mark>?</h5>
+                    <h5 class="card-title">Shreya, Sanika, Jiya, and Noor's Scrum Team </h5>
                     <p class="card-text">
                         <ol>
                             <li>Python 3.9 is used for most of our backend PBL. HTML, CSS, JavaScript will be used in frontend</li>
@@ -20,7 +20,7 @@
                             <li>API and Microservice using Flask.  Mastering development techniques in creating and consuming RESTful APIs</li>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="https://jiya-sav.github.io/SSJN/" class="btn btn-primary">Our Group Repository</a>
                     </div>
                 </div>
             </div>
