--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,10 +7,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Nighthawk Coding" %}
-{% set github = "https://github.com/nighthawkcoders" %}
-{% set twitter = "https://twitter.com/NighthawkCoding" %}
-{% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+{% set basename = "Shreya's Flask Repository" %}
+{% set github = "https://github.com/rey444" %}
+{% set youtube = "https://www.youtube.com/playlist?list=PLEWrBQ2HdObxIK4hD8IZltWapGQce21zv" %}
 
 <head>
     <!-- Required meta tags -->
