--- a/templates/stub.html
+++ b/templates/stub.html
@@ -2,7 +2,7 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Stubby" %}
+{% set project = "About Me" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
@@ -10,7 +10,7 @@
     <div class="px-5 py-5 mx-auto">
         <h1 class="text-primary"><strong>Shreya Sapkal</strong></h1>
         <p class="text-secondary">I enjoy baking, writing, reading, and studying engine maintenance manuals. I'm the co-president of the DNHS Speech & Debate Team, and the co-president of DNHS' South Asian Student Union (SASU). You can regularly find me hiking or training at Karate. In the future, I aspire to become a Mechanical Engineer and pursue my passion for cars.</p>
-        <a href="https://linktr.ee/southasiansu">Click to learn more about SASU!</a>
+        <a href="https://linktr.ee/southasiansu" class="btn btn-primary">Click to learn more about SASU!</a>
         <img class="card-img-top" src="{{ url_for('static', filename='assets/shreya2.jpg') }}" alt="about-me-pic" 
     </div>
 {% endblock %}
