--- a/templates/index.html
+++ b/templates/index.html
@@ -26,18 +26,18 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/spotify.png') }}" alt="Flask Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What is <mark>Flask</mark>? How do I start Web development?</h5>
+                    <h5 class="card-title">SSJN x Spotify!</h5>
                     <p class="card-text">
                         <ol>
-                            <li>Flask Framework is the popular Web Application development framework of Python.</li>
-                            <li>Blueprint is utility to help abstract complexity, moving information in independent files and directories.</li>
-                            <li>HTML using Bootstrap is a great way to build interesting pages and reduce CSS</li>
-                            <li>Jinja2 is a server-side Python like template engine, supports HTML5 web development, and provides full integration with Flask.</li>
+                            <li>Our scrum team project will link users with songs that match their emotions!</li>
+                            <li>Music is an integral part of our lives, and our project will make it easier for users to discover new music for any moment.</li>
+                            <li>Users will input their current emotion into a text box</li>
+                            <li>Our program will output a list of songs that matches the emotion entered, with links to start exploring!</li>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="https://jiya-sav.github.io/SSJN/markdown/2022/09/25/team-project-purpose.html" class="btn btn-primary">Our Project Purpose</a>
                     </div>
                 </div>
             </div>
@@ -62,3 +62,4 @@
         </div>
     </div>
 {% endblock %}
+
