full modification of index.html complete

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/spotify.png') }}" alt="Flask Development" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/spotify.png') }}" alt="Group Project" height="250">
                     <div class="card-body">
                     <h5 class="card-title">SSJN x Spotify!</h5>
                     <p class="card-text">
@@ -43,18 +43,16 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Backend and Persistence" height="250">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/sasu.png') }}" alt="SASU-vai-rey" height="400">
                     <div class="card-body">
-                    <h5 class="card-title">How do you manage <mark>Persistent data</mark> with Python?</h5>
+                    <h5 class="card-title">Explore My Clubs!</h5>
                     <p class="card-text">
-                        <ol>
-                            <li>A Database is an example of persistent data that is held on a computer.  Programming languages and frameworks allow you to store and retrive data.</li>
-                            <li>SQL stands for Structured Query Language · SQL lets you access and manipulate databases and has become a long lasting development standard.</li>
-                            <li>SQLAlchemy is the Python SQL toolkit and Object Relational Mapper (ORM) that gives application developers the full power and flexibility of SQL.</li>
-                            <li>There are many newer and sometimes easier Database languages and frameworks.  Mongo, DynamoDB, Neo4J are Databases being used by students developers in last 3 years.</li>
-                        </ol>
+                        <ul>
+                            <li><a href="https://linktr.ee/southasiansu" class="btn btn-primary">Check out South Asian Student Union!</a></li>
+                            <li><a href="https://instagram.com/dnspeechanddebate?igshid=YmMyMTA2M2Y=" class="btn btn-primary">Check out Speech and debate!</a></li>
+                        </ul>
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/speech.jpg') }}" alt="speech" height="250"></li>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
