changing home page theme

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,3 +61,23 @@
     </div>
 {% endblock %}
 
+<!-- Setting up a block replacement to customize background to NET 
+1. change "rings" to "net" in line 69
+2. change "rings" to "net" in line 71-->
+{% block background %}
+    <script src="{{ url_for('static', filename='js/three.r119.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vanta.net.min.js') }}"></script>
+    <script>
+        VANTA.NET({
+            el: "body",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00
+        })
+    </script>
+{% endblock %}
+
